objects/TASKRAY__trDependency__c.object
<CustomObject>
    <description>This is a TaskRay &quot;behind the scenes&quot; object that stores the information for predecessor and successor task relationships.</description>
    <fields>
        <fullName>TASKRAY__trDependencyType__c</fullName>
        <label>Dependency Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Finish-To-Start</fullName>
                    <default>true</default>
                    <label>Finish-To-Start</label>
                </value>
                <value>
                    <fullName>Start-To-Start</fullName>
                </value>
                <value>
                    <fullName>Finish-To-Finish</fullName>
                </value>
                <value>
                    <fullName>Start-To-Finish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TASKRAY__trLag__c</fullName>
        <label>Lag</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trPredecessorTask__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Predecessor Task</label>
        <referenceTo>TASKRAY__Project_Task__c</referenceTo>
        <relationshipLabel>TaskRay Successor Dependencies</relationshipLabel>
        <relationshipName>Successor_Dependencies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trScheduleConflict__c</fullName>
        <formula>IF( NOT(TASKRAY__trSuccessorTask__r.TASKRAY__trLockDates__c), false,
  IF(TASKRAY__trSuccessorTask__r.TASKRAY__trLockDates__c &amp;&amp;  TASKRAY__trSuccessorTask__r.TASKRAY__trIsMilestone__c &amp;&amp; TASKRAY__trPredecessorTask__r.TASKRAY__Deadline__c &gt; TASKRAY__trSuccessorTask__r.TASKRAY__Deadline__c, true,
  IF(ISPICKVAL(TASKRAY__trDependencyType__c , &apos;Finish-To-Start&apos;), TASKRAY__trPredecessorTask__r.TASKRAY__Deadline__c &gt; TASKRAY__trSuccessorTask__r.TASKRAY__trStartDate__c,
  IF(ISPICKVAL(TASKRAY__trDependencyType__c , &apos;Finish-To-Finish&apos;), TASKRAY__trPredecessorTask__r.TASKRAY__Deadline__c &gt; TASKRAY__trSuccessorTask__r.TASKRAY__Deadline__c,
  IF(ISPICKVAL(TASKRAY__trDependencyType__c , &apos;Start-To-Start&apos;), TASKRAY__trPredecessorTask__r.TASKRAY__trStartDate__c &gt; TASKRAY__trSuccessorTask__r.TASKRAY__trStartDate__c,
  IF(ISPICKVAL(TASKRAY__trDependencyType__c , &apos;Start-To-Finish&apos;), TASKRAY__trPredecessorTask__r.TASKRAY__trStartDate__c &gt; TASKRAY__trSuccessorTask__r.TASKRAY__Deadline__c, false))))))</formula>
        <label>In Schedule Conflict</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trSuccessorTask__c</fullName>
        <label>Successor Task</label>
        <referenceTo>TASKRAY__Project_Task__c</referenceTo>
        <relationshipLabel>TaskRay Dependencies</relationshipLabel>
        <relationshipName>Predecessor_Dependencies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTemplateSource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template Source</label>
        <referenceTo>TASKRAY__trDependency__c</referenceTo>
        <relationshipLabel>Cloned Dependencies</relationshipLabel>
        <relationshipName>Template_Source</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>TaskRay Dependency</label>
    <nameField>
        <displayFormat>DEPENDENCY-{0}</displayFormat>
        <label>TaskRay Dependency Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TaskRay Dependencies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>